tests/NormalTests/paczka1/fuzzy1/79042932.err
Error in line 2: A522 A359 71,1
Error in line 3: A522 S261 13,3
Error in line 1: EhqK1 S261 16,5
Error in line 27: EhqK1 A522 67,5
